--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Survey form</title>
-    </head>
-    <body>
-
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Survey form</title>
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body></body>
 </html>
