--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body></body>
+  <body>
+      <header id="title">
+        <h1>Survey form</h1>
+        <p>
+            Fill in the form below.
+        </p>
+      </header>
+  </body>
 </html>
