--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-      <header id="title">
-        <h1>Survey form</h1>
-        <p>
-            Fill in the form below.
-        </p>
-      </header>
+    <header id="title">
+      <h1>Survey form</h1>
+      <p id="description">
+        Fill in the form below.
+      </p>
+    </header>
+    <main id="main">
+      <form id="survey-form" autocomplete="off">
+        <input type="text" id="name" />
+        <input type="email" id="email" />
+        <input type="number" id="number" />
+
+        <input type="submit" id="submit" />
+      </form>
+    </main>
   </body>
 </html>
