--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </header>
     <main id="main">
       <form id="survey-form" autocomplete="off">
-        <input type="text" id="name" />
-        <input type="email" id="email" />
-        <input type="number" id="number" />
+        <input type="text" id="name" placeholder="Enter your name" />
+        <input type="email" id="email" placeholder="Enter your email" />
+        <input type="number" id="number" placeholder="Age" />
 
-        <input type="submit" id="submit" />
+        <input type="submit" id="submit" value="Send" />
       </form>
     </main>
   </body>
