--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     </header>
     <main id="main">
       <form id="survey-form" autocomplete="off">
-        <input type="text" id="name" placeholder="Enter your name" />
-        <input type="email" id="email" placeholder="Enter your email" />
-        <input type="number" id="number" placeholder="Age" />
+        <label for="name" id="name-label">Name:</label>
+        <input type="text" id="name" placeholder="Enter your name" required/>
+
+        <label for="email" id="email-label">Email:</label>
+        <input type="email" id="email" placeholder="Enter your email" required/>
+
+        <label for="number" id="number-label">Age:</label>
+        <input type="number" id="number" placeholder="Age" min="16" max="119" step="1" required/>
 
         <input type="submit" id="submit" value="Send" />
       </form>
