--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
           </select>
         </label>
 
-        
+        <label for="yes">Yes
+          <input type="radio" id="yes" name="news">
+        </label>
+        <label for="no">No
+          <input type="radio" id="no" name="news">
+        </label>
 
         <input type="submit" id="submit" value="Send" />
       </form>
