--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           </select>
         </label>
 
+        <p>Would you want to receive news by email?</p>
         <label for="yes">Yes
           <input type="radio" id="yes" name="news">
         </label>
@@ -43,8 +44,8 @@
           <input type="radio" id="no" name="news">
         </label>
 
-        <label for="progLanguage">What is your favourite programming language?
-          <select name="progLanguage" id="proglanguage">
+        <label for="prog-language">What is your favourite programming language?
+          <select name="prog-language" id="prog-language">
             <option value="c++">C++</option>
             <option value="java">Java</option>
             <option value="c#">C#</option>
@@ -52,6 +53,37 @@
             <option value="python">Python</option>
           </select>
         </label>
+
+        <p>What usually helps you in improving your programming skills</p>
+        <label for="communication">
+          <input type="checkbox" id="communication" name="helper" value="communication">
+          communication with smarter people
+        </label>
+        <label for="books">
+          <input type="checkbox" id="books" name="helper" value="books"> 
+          books
+        </label>
+        <label for="practice">
+          <input type="checkbox" id="practice" name="helper" value="practice">
+          practice
+        </label>
+        <label for="youtube">
+          <input type="checkbox" id="youtube" name="helper" value="youtube">
+          youtube
+        </label>
+        <label for="tutorials">
+          <input type="checkbox" id="tutorials" name="helper" value="tutorials">
+          tutorials
+        </label>
+        <label for="environment">
+          <input type="checkbox" id="environment" name="helper" value="environment">
+          work environment
+        </label>
+        <label for="lifestyle">
+          <input type="checkbox" id="liffestyle" name="helper" value="lifestyle">
+          helthy lifestyle
+        </label>
+        
 
         <input type="submit" id="submit" value="Send" />
       </form>
