--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
           <input type="checkbox" id="liffestyle" name="helper" value="lifestyle">
           helthy lifestyle
         </label>
-        
+
+        <p>Would you like to write down any comments?</p>
+        <textarea id="comments" name="comments" rows="7" cols="45"></textarea>
 
         <input type="submit" id="submit" value="Send" />
       </form>
